--- a/angular_js/todolist_grafikart/views/index.ejs
+++ b/angular_js/todolist_grafikart/views/index.ejs
@@ -19,7 +19,7 @@
 		<section id="main">
 			<input type="checkbox" id="toggle-all" ng-model="allCheck" ng-click="checkAllTodo(allCheck)">
 			<ul id="todo-list">
-				<li ng-repeat="todo in todos" ng-class="{completed : todo.completed, editing: todo.editing}" ng-dblclick="todo.editing = true">
+				<li ng-repeat="todo in todos | filter:statusFilter | orderBy:'completed'" ng-class="{completed : todo.completed, editing: todo.editing}" ng-dblclick="todo.editing = true">
 					<div class="view">
 						<input type="checkbox" class="toggle" ng-model="todo.completed">
 						<label>{{todo.name}}</label>
@@ -34,6 +34,11 @@
 
 		<footer id="footer">
 			<span id="todo-count"><strong>{{remaining}}</strong> Taches restantes</span>
+			<ul id="filters">
+				<li><a href="#/" ng-class="{selected: location.path == '/'}">All</a></li>
+				<li><a href="#/Active" ng-class="{selected: location.path == '/Active'}">Active</a></li>
+				<li><a href="#/Done" ng-class="{selected: location.path == '/Done'}">Done</a></li>
+			</ul>
 		</footer>
 
 	</section>
